Fix word wrapping on narrow screens
the animation is unfortunately still broken though

--- a/static/turbofish.css
+++ b/static/turbofish.css
@@ -55,6 +55,7 @@ t, u, r, b, o, f, i, s, h {
     line-height: 1;
     color: #fff;
     text-decoration: none;
+    white-space: nowrap;
 
     position: relative;
 
